--- a/platformio.ini
+++ b/platformio.ini
@@ -53,5 +53,9 @@ lib_deps =
 	${env.lib_deps}
 monitor_speed = 115200
 monitor_echo = yes
-upload_port = COM14
-monitor_port = COM12
+; Home
+; upload_port = COM14
+; monitor_port = COM12
+; Office
+upload_port = COM5
+monitor_port = COM4
