--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,8 @@ lib_deps =
 	nrf24/RF24Network@^2.0.0
 build_flags =
 	-std=c++17 -Os -g2
-	-Wall -Wextra
+	-Wall
+	-Wextra
 
 [env:nanoatmega328new]
 platform = atmelavr
@@ -59,3 +60,16 @@ monitor_echo = yes
 ; Office
 upload_port = COM5
 monitor_port = COM9
+
+[env:Nucleo-F411RE]
+platform = ststm32
+board = nucleo_f411re
+framework = arduino
+lib_deps =
+	${env.lib_deps}
+build_flags =
+	${env.build_flags}
+monitor_speed = 115200
+monitor_echo = yes
+monitor_port = COM3
+upload_port = COM3
