Use Alt SPI on F411RE

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,5 +71,9 @@ build_flags =
 	${env.build_flags}
 monitor_speed = 115200
 monitor_echo = yes
-monitor_port = COM3
-upload_port = COM3
+; Office
+; monitor_port = COM3
+; upload_port = COM3
+; Home
+monitor_port = COM8
+upload_port = COM8
